# TC

./: CMakeLists.txt
.ci/: build.sh
.github/actions/tcalib/: action.yml
.github/workflows/: clang-debug.yaml  clang-release.yaml  gcc-debug.yaml  gcc-release.yaml
docker/: Dockerfile
scripts/: docker_build.sh  local_build.sh
src/: CMakeLists.txt  id.h  image.h  observation.h
src/camera_model/: distortion.h  pinhole.h
src/common/: constant.h  conversion.h
src/marker_detector/: detector.cpp  detector.h  marker.h
src/math/: matrix.h  pose.h  vec.h
tests/: CMakeLists.txt  test_image.cpp  test_matrix.cpp  test_pinhole.cpp  test_pose.cpp  test_vec.cpp
